Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.00***

****	Fix Preprocessor dropping some `line directives.  [Mark Nodine]

* Verilog::Language 3.000 2007/06/12

** 	Note this is a MAJOR release that may have incompatibilities with
	earlier versions, although I've attempted to minimize problems.
	Please email any problems to the author.

**	Verilog::SigParser has been completely rewritten.  The good news is
	it understands almost the entire Verilog 2005 language.  The bad
	news is there are minor incompatibilities with previous versions,
	and the parser now errors out when it does not understand something
	rather then ignoring it.

***	The Verilog::SigParser->pin callback now passes "" as the pin name
	instead of "pin###" if connecting by position instead of by name.

***	Added Verilog::SigParser->funcsignal callback for variables declared
	inside a function or task.  bug26972.  [Mark Nodine]
	
***	Added Verilog::SigParser->instant callbacks for gate primitives.
	bug26969, bug27062. [Mark Nodine]
	
***	Added Verilog::SigParser->parampin callbacks for parameter connections
	to instantiations.
	
***	Added Verilog::SigParser->signal_decl callbacks for all module vars,
	including parameters and genvars.
	
***	Added Verilog::SigParser->signal_decl callback argument with 
	initial values of parameters and wires. [Mark Nodine]
	
**	Verilog::Parser has been replaced with the front end of the
	SigParser.  The preproc and syscall callbacks were added

***	Require call to Verilog::Parser->eof() at the end of all parsers.
	
***	Changed Verilog::Parser->unreadback() method to not clear state.
	You must now call unreadback('') to clear the unreadback characters.

***	The long depreciated Verilog::Parse module has been removed.

****	Fixed Verilog::Parser mis-parsing spaces in numbers, bug27070.
