@@ -100,6 +100,11 @@ Value indicates the language standard as per the `begin_keywords macro,
 
 Return true if the given symbol string is a Verilog compiler directive.
 
+=item Verilog::Language::is_gateprim ($symbol_string)
+
+Return true if the given symbol is a built in gate primitive; for example
+"buf", "xor", etc.
+
 =item Verilog::Language::language_standard ($year)
 
 Sets the language standard to indicate what are keywords.  If undef, all
@@ -188,7 +193,7 @@ require 5.000;
 require Exporter;
 
 use strict;
-use vars qw($VERSION %Keyword %Keywords %Compdirect $Standard);
+use vars qw($VERSION %Keyword %Keywords %Compdirect $Standard %Gateprim);
 use Carp;
 
 ######################################################################
@@ -260,6 +265,12 @@ foreach my $kwd (
 
 language_standard ('1800-2005');  # Default standard
 
+foreach my $kwd (qw(
+		    and buf bufif0 bufif1 cmos nand nmos nor not notif0
+		    notif1 or pmos pulldown pullup rcmos rnmos rpmos rtran
+		    rtranif0 rtranif1 tran tranif0 tranif1 xnor xor
+		    )) { $Gateprim{$kwd} = '1364-1995'; }
+
 ######################################################################
 #### Keyword utilities
 
@@ -303,6 +314,11 @@ sub is_keyword {
 sub is_compdirect {
     my $symbol = shift;
     return ($Compdirect{$symbol});
+}
+
+sub is_gateprim {
+    my $symbol = shift;
+    return ($Gateprim{$symbol});
 }
 
 ######################################################################
