@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix Preprocessor dropping some `line directives.  [Mark Nodine]
 
+****	Fix Netlist "not found" errors on primitives, bug27624. [Jeff Trull]
+
 * Verilog::Language 3.000 2007/06/12
 
 ** 	Note this is a MAJOR release that may have incompatibilities with
